refactor : ResultDto 구조 수정, Dealer, Player Dto 분리